# GaussianProcess_GPU

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: common.h  cpu_GP.cpp  cpu_GP.h  cu_GP.cu  cu_GP.cuh  main.cpp  test_kernel.cu  test_kernel.cuh
